# qasync

./: README.md  pyproject.toml
qasync/: cli.py  config.py  output.py  runner.py  setup.py
qasync/syncer/: base.py  hdfs.py  rclone.py  registry.py
tests/: test_cli.py  test_config.py  test_hdfs_syncer.py  test_integration.py  test_rclone_syncer.py  test_registry.py  test_runner.py
